added a way that the trapdoors cant triggered by redstone